<resources>
    <string name="app_name">the scoop</string>
    <string name="for_you">For you</string>
    <string name="today">Today</string>
    <string name="following">Following</string>
    <string name="shelf">Shelf</string>
    <string name="search">Search</string>

    <string name="top_stories">Top stories right now</string>
    <string name="sheet_cancel">Cancel</string>
    <string name="sheet_go_to_source">Go to Source</string>
    <string name="sheet_share">Share</string>
    <string name="sheet_add_to_shelf">Add to Shelf</string>
    <string name="read_btn">Read full article</string>
    <string name="pop_source">Popular Sources</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="more">View more</string>
    <string name="retry">Retry</string>
    <string name="unavailable">The content isn\'t available</string>
    <string name="pick_your_sources">Pick your Sources</string>
    <string name="the_scoop">the scoop</string>
    <string name="shelf_frag">SHELF</string>
    <string name="offline">You haven\'t saved any article</string>
    <string name="your_stories">Your stories</string>

    <string name="path_data_plus">"M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"</string>
    <string name="path_data_check">"M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"</string>
    <string name="some">some time ago</string>
    <string name="remove">Remove from Shelf</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint">Enter email…</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="reenter_pass">Enter Password again</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_now">Sign Up now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="skip"
    >SKIP</string>
<string name="sign_in">Sign In</string>
<string name="choose_source">Go to Following Tab to choose Sources</string>
    </resources>