<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.following.FollowingFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
      >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:elevation="0dp"
            app:elevation="0dp"
            android:layout_height="wrap_content"
            tools:targetApi="lollipop">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:elevation="0dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:navigationIcon="@drawable/ic_search"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorBackground"
                tools:targetApi="lollipop">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/following"
                    android:textColor="#ffff"
                    android:textSize="20sp" />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prof_image"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_baseline_person_24"
                    android:layout_width="30dp"
                    android:layout_gravity="end"
                    android:layout_height="30dp"
                    android:layout_marginRight="16dp" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:background="@color/colorBackground"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/progress_follow"
            android:layout_width="50dp"
            android:layout_gravity="center"
            style="@style/TheScoop.Progressbar"
            android:layout_height="50dp"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/constraint_follow"
                android:visibility="gone"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:id="@+id/pop_source"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pop_source"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_source_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:overScrollMode="never"
                    android:clipToPadding="false"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pop_source" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popular_source_rv">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="@string/more" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_chevrons_right"
                        tools:layout_editor_absoluteX="318dp"
                        tools:layout_editor_absoluteY="224dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/browse_categories"
                    android:id="@+id/browse_cat"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/pop_source"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_rv"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/browse_cat"
                    tools:targetApi="lollipop" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


        <include
            android:visibility="gone"
            android:id="@+id/no_connection"
            layout="@layout/no_connection"/>

        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>